--- a/movie analysis project.ipynb
+++ b/movie analysis project.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "d46bf0e7",
+   "execution_count": 128,
+   "id": "01037b57",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'figurre' from 'matplotlib.pyplot' (C:\\Users\\Oshodi Raymond\\anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 7>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      6\u001b[0m plt\u001b[38;5;241m.\u001b[39mstyle\u001b[38;5;241m.\u001b[39muse(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mggplot\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m figurre\n\u001b[0;32m      9\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatplotlib\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m inline\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     10\u001b[0m matplotlib\u001b[38;5;241m.\u001b[39mrcparams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfigure.figsize\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m8\u001b[39m)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'figurre' from 'matplotlib.pyplot' (C:\\Users\\Oshodi Raymond\\anaconda3\\lib\\site-packages\\matplotlib\\pyplot.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -25,16 +13,16 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
-    "from matplotlib.pyplot import figurre\n",
+    "from matplotlib.pyplot import figure\n",
     "\n",
     "%matplotlib  inline\n",
-    "matplotlib.rcparams['figure.figsize']=(12,8) #Aadjust the configuration of the plots we will create "
+    "matplotlib.rcParams['figure.figsize']=(12,8) #Aadjust the configuration of the plots we will create "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4b291034",
+   "id": "196814ed",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76aad8f1",
+   "id": "cf5b7197",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7aedc7f1",
+   "id": "06e188af",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a1bb53d0",
+   "id": "9fbde8e8",
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "32fa6b59",
+   "id": "aa0ec398",
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1086,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "0174dfba",
+   "id": "aa823a68",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "deddeb90",
+   "id": "ad28e2e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,7 +1421,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f5e5d207",
+   "id": "4a4f0519",
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "ae1b7d8b",
+   "id": "277d98bd",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "7a2471b5",
+   "id": "82c894ae",
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "fde26dba",
+   "id": "606b97c5",
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "7b954d10",
+   "id": "a4d332da",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "3b60ea8f",
+   "id": "486ac56c",
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "f1d61a4d",
+   "id": "65c1f01c",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2011,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "c16f838d",
+   "id": "88197739",
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2182,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "b3bd8fd0",
+   "id": "36848faf",
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "b293f3f3",
+   "id": "d05d0837",
    "metadata": {},
    "outputs": [
     {
@@ -2751,7 +2739,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "1d433d33",
+   "id": "d530054e",
    "metadata": {},
    "outputs": [
     {
@@ -2793,7 +2781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a14f19",
+   "id": "eea28194",
    "metadata": {},
    "outputs": [],
    "source": []
